hided scrollbar in modal window, fixed modal-window height

--- a/src/sass/_modal.scss
+++ b/src/sass/_modal.scss
@@ -24,7 +24,18 @@
         transition: background var(--transit), box-shadow var(--transit);
         position: relative;
         overflow-y: auto;
-        height: 95vh;
+        height: 95%;
+    }
+
+    //! Hide scrollbar for Chrome, Safari and Opera 
+    .modal-window::-webkit-scrollbar {
+        display: none;
+      }
+   
+    //! Hide scrollbar for IE, Edge and Firefox
+    .modal-window  {
+      -ms-overflow-style: none;  /* IE and Edge */
+      scrollbar-width: none;  /* Firefox */
     }
 
     .modal-image {
@@ -180,7 +191,8 @@
          padding: 44px 48px 44px 44px;
          display: flex;
          flex-wrap: wrap;
-         height: 488px;
+         height: none;
+         max-height: 488px;
      }
 
     .modal-image {
@@ -192,6 +204,7 @@
 
     .modal-content-wrapper {
         max-width: 302px;
+        overflow-y: hidden;
     }
     
     .modal-title {
@@ -231,7 +244,7 @@
     .modal-window {
          width: 846px;
          padding: 60px;
-         height: 598px;
+         max-height: 598px;
      }
 
     .modal-image {
